test/langtools/tools/javac/valhalla/lworld-values/CheckMakeDefault.out
CheckMakeDefault.java:9:15: compiler.err.illegal.combination.of.modifiers: interface, value
CheckMakeDefault.java:10:24: compiler.err.illegal.combination.of.modifiers: abstract, value
CheckMakeDefault.java:13:20: compiler.err.make.default.with.nonvalue
CheckMakeDefault.java:34:18: compiler.err.invalid.arguments.to.make.default
CheckMakeDefault.java:35:19: compiler.err.make.default.with.nonvalue
5 errors
